Added Vehicle Service

--- a/VehicleShipment.Web/appsettings.json
+++ b/VehicleShipment.Web/appsettings.json
@@ -8,5 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWEKey": "9gbwdEYXS9BMQYP4k8elDRgQTkw3wHZ3"
 }
